--- a/package.json
+++ b/package.json
@@ -1,27 +1,34 @@
 {
-  "name": "cars-sales-node",
+  "name": "sport-app",
   "version": "1.0.0",
-  "description": "BE part for app",
+  "description": "Sport item online shopping service",
   "main": "main.ts",
-  "repository": "https://github.com/trusthemind/cars-sales",
-  "author": "Fedir Melnyk <pluserwork24@gmail.com> , Vladyslav Zelinskyi <zelinskijvlad5@gmail.com>",
+  "repository": "",
+  "author": "",
   "scripts": {
-    "start": "ts-node main.ts"
+    "start": "ts-node main.ts",
+    "dev": "nodemon --watch 'src/**/*.ts' --exec ts-node main.ts"
   },
   "dependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.4",
-    "@types/pg": "^8.11.4",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "pg": "^8.11.5",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.5.3",
+    "multer": "^1.4.5-lts.1",
     "prettier": "^3.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/multer": "^1.4.11",
     "@typescript-eslint/eslint-plugin": "^7.5.0",
     "@typescript-eslint/parser": "^7.5.0",
-    "eslint": "^8.57.0"
+    "eslint": "^8.57.0",
+    "nodemon": "^3.1.4"
   }
 }
