--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "author": "",
   "scripts": {
     "start": "ts-node main.ts",
-    "dev": "nodemon --watch 'src/**/*.ts' --exec ts-node main.ts"
+    "dev": "nodemon --watch 'src/**/*.ts' --exec ts-node main.ts",
+    "build": "tsc"
   },
   "dependencies": {
     "@types/express": "^4.17.21",
